--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
                 <input type="text" class="email" id="email" placeholder="Email or Phone Number" required>
                 <input type="password" class="email" id="email" placeholder="Password" required>
                 </div>
-                <button type="submit" class="login_btn" id="login_btn"><a href="#">Log In</a></button>
+                <button type="submit" class="login_btn" id="login_btn"><a href="#" onclick="login()">Log In</a></button>
                 <div class="checkarea-help">
                 <div class="checkarea">
                     <input type="checkbox" name="checkbox" id="checkbox" checked = "checked">
@@ -37,5 +37,11 @@
             </div>
         </div>
     </main>
+
+    <script>
+        function login(){
+            window.alert("Thank You for Loging In");
+        }
+    </script>
 </body>
 </html>
