--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
                 <input type="email" class="email" id="email" placeholder="Email3 or Phone Number" required>
                 <input type="password" class="email" id="email" placeholder="Password" required>
                 </div>
-                <button type="submit" class="login_btn" id="login_btn"><a href="#" onclick="login()">Log In</a></button>
+                <button type="submit" class="login_btn" id="login_btn"><a href="index.html" onclick="login()">Log In</a></button>
                 <div class="checkarea-help">
                 <div class="checkarea">
                     <input type="checkbox" name="checkbox" id="checkbox" checked = "checked">
@@ -33,7 +33,7 @@
             </form>
             <div class="login-signup-now">
                 <p>New to DocYard?</p>
-                <a href="#">Sign Up Now</a>
+                <a href="signup.html">Sign Up Now</a>
             </div>
         </div>
     </main>
