--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
             <h2>Log In</h2>
             <form action="get">
                 <div class="input">
-                <input type="email" class="email" id="email" placeholder="Email3 or Phone Number" required>
+                <input type="email" class="email" id="email" placeholder="Email or Phone Number" required>
                 <input type="password" class="email" id="email" placeholder="Password" required>
                 </div>
                 <button type="submit" class="login_btn" id="login_btn"><a href="index.html" onclick="login()">Log In</a></button>
