--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="#">Home</a>
                 <a href="#">About</a>
                 <a href="#">Blog</a>
-                <a href="#">Feedback</a>
+                <a href="feedback.html">Feedback</a>
             </div>
             <div class="login-signup">
                 <button type="submit" class="signup"><a href="signup.html">Sign Up</a></button>
