--- a/feedback.html
+++ b/feedback.html
@@ -29,12 +29,12 @@
                 <input type="number" class="email1" id="email" placeholder="Number" required>
             </div>
             <div class="area">
-                <label for="feedback">Comment</label>
-                <textarea name="textarea" id="textarea" cols="20" rows="10">Comment down your queries here...</textarea>
+                <label for="feedback">Message</label>
+                <textarea name="textarea" id="textarea" cols="20" rows="10">Message down your queries here...</textarea>
             </div>
         </form>
         <div class="button">
-        <button type="submit" class="submit" onclick="submit()"><a href="index.html">Submit</a></button>
+        <a href="index.html">Submit</a>
         </div>
     </main>
     <script>
