--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <a href="feedback.html">Feedback</a>
             </div>
             <div class="login-signup">
-                <button type="submit" class="signup"><a href="signup.html">Sign Up</a></button>
-                <button type="submit" class="login"><a href="login.html">Log In</a></button>
+                <a href="signup.html">Sign Up</a>
+                <a href="login.html">Log In</a>
             </div>
         </div>
     </header>
