--- a/feedback.html
+++ b/feedback.html
@@ -30,11 +30,11 @@
             </div>
             <div class="area">
                 <label for="feedback">Message</label>
-                <textarea name="textarea" id="textarea" cols="20" rows="10">Message down your queries here...</textarea>
+                <textarea name="textarea" id="textarea" cols="20" rows="10" placeholder="Put your message here"></textarea>
             </div>
         </form>
         <div class="button">
-        <a href="index.html">Submit</a>
+        <button type="submit" class="submit" onclick="submit()"><a href="index.html">Submit</a></button>
         </div>
     </main>
     <script>
