--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <div class="navbar">
             <div class="a_navbar">
                 <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Blog</a>
+                <a href="about.html">About</a>
+                <a href="blog.html">Blog</a>
                 <a href="feedback.html">Feedback</a>
             </div>
             <div class="login-signup">
