--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                 </p>
             </div>
             <div class="founders"><!--About the founders-->
-                <h1>Let's know about Co-founder's.</h1>
+                <h1>Let's know about Co-founders.</h1>
                 <div class="founder1"><!--Founder 1-->
                     <h2>1. Shourabh Sharma</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, aut est qui sed dolor repellat eum facilis optio, laborum provident labore odit dolores enim natus unde amet quae aspernatur totam?
@@ -75,7 +75,7 @@
             </div>
         </div>
     </main>
-    <footer>
+    <footer><!--For query but it will take back to feedback-->
         <p> For any query feel free to contact</p>
         <a href="feedback.html">Contact</a>
     </footer>
