--- a/about.html
+++ b/about.html
@@ -38,6 +38,7 @@
                     <a href="http://linkedin.com/in/sourabhxsharma"><img src="images/instagram.png"></a>
                     <a href="http://linkedin.com/in/sourabhxsharma"><img src="images/linkedin.png"></a>
                     <a href="http://twitter.com/sourabhxsharma"><img src="images/twitter.png"></a>
+                    <div class="blob"></div>
                 </div>
                 </div>
                 <div class="founder1"><!--Founder 2-->
