--- a/about.html
+++ b/about.html
@@ -23,8 +23,13 @@
         <div class="about"><!--Whole content-->
             <div class="aboutdoc"><!--What is docyard-->
                 <h1>What is DocYard?</h1>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, aut est qui sed dolor repellat eum facilis optio, laborum provident labore odit dolores enim natus unde amet quae aspernatur totam?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit   Optio voluptas veritatis tempora ad. Aliquam amet   voluptatum vel quibusdam animi totam dolorem venia   deleniti quas id fugiat maiores laboriosam blanditiis   Dignissimos!
+                <p>Welcome to DocYard! Here we talk about Space, Science, Technology, Mythology, Businesses, Geopolitics, Finance, Marketing, Startups & Technology. 
+
+                    We pick, pack and parcel to you the wonders and mysteries of the World! 
+                    
+                    We believe in distributing Facts and unadulterated content. Our aim is to provide the best quality information to the world and create a bond of trust in our Community.
+                    
+                    At DocYard we value Trust, Transparency, Quality information and Building strong bonds. 
                 </p>
             </div>
             <div class="founders"><!--About the founders-->
