--- a/blog.html
+++ b/blog.html
@@ -13,10 +13,28 @@
         <div class="nav_bar">
             <img src="images/docyardbg.png" class="nav_barlogo" width="140px" height="auto">
             <div class="socialmedia">
-                <img src="images/instagram.png">
+                <a href="#"><img src="images/instagram.png"></a>
+                <a href="#"><img src="images/youtube.png"></a>
             </div>
         </div>
     </header>
-    <main></main>
+    <main>
+        <div class="yt">
+        <h1>Recommended</h1>
+        <div class="recommended_yt">
+        <a href="https://youtu.be/-jv74Ub5Pfc"><img class="ytimg" src="images/docyard.png"></a>
+        <a href="https://youtu.be/nTTBwRvVlG4"><img class="ytimg" src="images/docyard.png"></a>
+        <a href="https://youtu.be/nTTBwRvVlG4"><img class="ytimg" src="images/docyard.png"></a>
+        <a href="https://youtu.be/Sj8QD3BtVF0"><img class="ytimg" src="images/docyard.png"></a>
+        </div>
+        </div>
+        <div class="media">
+        <h1>Shorts</h1>
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#"></a>
+        <a href="#"></a>
+        </div>
+    </main>
 </body>
 </html>
