--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@
         <div class="yt">
         <h1>Recommended</h1>
         <div class="recommended_yt">
-        <a href="https://youtu.be/-jv74Ub5Pfc"><img class="ytimg" src="images/docyard.png"></a>
+        <a href="https://www.youtube.com/watch?v=DQ25i8Gbo-M"><img class="ytimg" src="images/video1.jpg"><p>Musk marries Mars</p></a>
         <a href="https://youtu.be/nTTBwRvVlG4"><img class="ytimg" src="images/docyard.png"></a>
         <a href="https://youtu.be/nTTBwRvVlG4"><img class="ytimg" src="images/docyard.png"></a>
         <a href="https://youtu.be/Sj8QD3BtVF0"><img class="ytimg" src="images/docyard.png"></a>
