--- a/blog.html
+++ b/blog.html
@@ -25,9 +25,15 @@
             <div class="card">
         <a href="https://www.youtube.com/watch?v=DQ25i8Gbo-M"><img class="ytimg" src="images/video1.jpg"><p>Musk marries Mars</p></a>
             </div>
-        <a href="https://youtu.be/nTTBwRvVlG4"><img class="ytimg" src="images/docyard.png"></a>
-        <a href="https://youtu.be/nTTBwRvVlG4"><img class="ytimg" src="images/docyard.png"></a>
-        <a href="https://youtu.be/Sj8QD3BtVF0"><img class="ytimg" src="images/docyard.png"></a>
+            <div class="card" id="card2">
+        <a href="https://youtu.be/nTTBwRvVlG4"><img class="ytimg" src="images/video1.jpg"></a>
+            </div>
+            <div class="card" id="card3">
+        <a href="https://youtu.be/nTTBwRvVlG4"><img class="ytimg" src="images/video1.jpg"></a>
+            </div>
+            <div class="card" id="card4">
+        <a href="https://youtu.be/Sj8QD3BtVF0"><img class="ytimg" src="images/video1.jpg"></a>
+            </div>
         </div>
         </div>
         <div class="media">
