--- a/index.html
+++ b/index.html
@@ -22,13 +22,22 @@
                 <a href="login.html">Log In</a>
             </div>
         </div>
+        <div onclick="option()" class="navbarmini">
+            <img src="images/menu.png">
+            <div class="a_navbarmini">
+                <a href="#">Home</a>
+                <a href="about.html">About</a>
+                <a href="blog.html">Blog</a>
+                <a href="feedback.html">Feedback</a>
+            </div>
+        </div>
     </header>
     <main>
         <div class="mainportion">
             <div class="blob"></div>
             <img class="logo" src="images/docyardbg.png">
         </div>
-        
     </main>
 </body>
+<script src="script.js"></script>
 </html>
