--- a/about.html
+++ b/about.html
@@ -14,8 +14,8 @@
         <img src="images/docyardbg.png" class="logo" width="140px">
         <div class="socialmedia">
             <a href="index.html">Home</a>
-            <a href="https://www.instagram.com/docyardhq/?next=%2F"><img src="images/instagram.png"></a><!--Instagram logo and link-->
-            <a href="https://youtube.com/@DocYardDocumentary"><img src="images/youtube.png"></a><!--Youtube logo and link-->
+            <a href="https://www.instagram.com/docyardhq/?next=%2F" target="_blank"><img src="images/instagram.png"></a><!--Instagram logo and link-->
+            <a href="https://youtube.com/@DocYardDocumentary" target="_blank"><img src="images/youtube.png"></a><!--Youtube logo and link-->
         </div>
         </div>
     </header>
@@ -40,9 +40,9 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit   Optio voluptas veritatis tempora ad. Aliquam amet   voluptatum vel quibusdam animi totam dolorem venia   deleniti quas id fugiat maiores laboriosam blanditiis   Dignissimos!
                 </p>
                 <div class="ceosocial"><!--Social media links to connect to Shourabh-->
-                    <a href="http://linkedin.com/in/sourabhxsharma"><img src="images/instagram.png"></a>
-                    <a href="http://linkedin.com/in/sourabhxsharma"><img src="images/linkedin.png"></a>
-                    <a href="http://twitter.com/sourabhxsharma"><img src="images/twitter.png"></a>
+                    <a href="http://instagram.com/sourabhxsharma" target="_blank"><img src="images/instagram.png"></a>
+                    <a href="http://linkedin.com/in/sourabhxsharma" target="_blank"><img src="images/linkedin.png"></a>
+                    <a href="http://twitter.com/sourabhxsharma" target="_blank"><img src="images/twitter.png"></a>
                     <div class="blob"></div>
                 </div>
                 </div>
@@ -52,9 +52,9 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit   Optio voluptas veritatis tempora ad. Aliquam amet   voluptatum vel quibusdam animi totam dolorem venia   deleniti quas id fugiat maiores laboriosam blanditiis   Dignissimos!
                 </p>
                 <div class="ceosocial"><!--Social media links to connect to Dheeraj-->
-                    <a href="http://instagram.com/dheerajexe"><img src="images/instagram.png"></a>
-                    <a href="http://linkedIn.com/in/dheeraj-vithalkar"><img src="images/linkedin.png"></a>
-                    <a href="http://twitter.com/dheerajexe"><img src="images/twitter.png"></a>
+                    <a href="http://instagram.com/dheerajexe" target="_blank"><img src="images/instagram.png"></a>
+                    <a href="http://linkedIn.com/in/dheeraj-vithalkar" target="_blank"><img src="images/linkedin.png"></a>
+                    <a href="http://twitter.com/dheerajexe" target="_blank"><img src="images/twitter.png"></a>
                 </div>
                 </div>
             </div>
