--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         </div>
     </main>
 
+    <footer>
+        <p onmousedown="getCurrentDate()"> Current Date is: <span class="output"></span></p>
+    </footer>
     <script src="script.js"></script>
 </body>
 
