--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="menu">
-            <span class="mainbutton"><img src="images/menu.png" onclick="showoption()" ondblclick="hideoption()"></span>
+            <span onclick="myFunction()" class="mainbutton"><img src="images/menu.png"></span>
               <span class="subbtn" id="subbtn">
             <span class="subbutton" id="subbutton"><a href="#">Home</a></span>
             <span class="subbutton" id="subbutton"><a href="about.html">About</a></span>
