--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="#">Home</a>
                 <a href="about.html">About</a>
                 <a href="blog.html">Blog</a>
-                <a href="feedback.html">Feedback</a>
+                <a href="feedback.html" title="Hiii">Feedback</a>
             </div>
             <div class="login-signup">
                 <a href="signup.html">Sign Up</a>
@@ -25,10 +25,10 @@
         <div class="menu">
             <span onclick="myFunction()" class="mainbutton"><img src="images/menu.png"></span>
               <span class="subbtn" id="subbtn">
-            <span class="subbutton" id="subbutton"><a href="#">Home</a></span>
-            <span class="subbutton" id="subbutton"><a href="about.html">About</a></span>
-            <span class="subbutton" id="subbutton"><a href="blog.html">Blog</a></span>
-            <span class="subbutton" id="subbutton"><a href="feedback.html">Feedback</a></span>
+            <span class="subbutton" id="subbutton"><a href="#" title="This is Home">Home</a></span>
+            <span class="subbutton" id="subbutton"><a href="about.html" title="This is About">About</a></span>
+            <span class="subbutton" id="subbutton"><a href="blog.html" title="This is Blog">Blog</a></span>
+            <span class="subbutton" id="subbutton" title="This is Feedback"><a href="feedback.html">Feedback</a></span>
               </span>
             </div>
     </header>
