--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="website icon" class="tab_logo" type="png" href="images/docyardlogobg.png">
-    <title>DocYard</title>
+    <title>DocYard.co.in</title>
 </head>
 <body>
     <header>
